@@ -46,7 +46,7 @@
 #  during configuration and initialization.
 #
 cd `dirname $0`/..
-LOG=`pwd`/egload.log
+LOG=${EGLOAD}/egload.log
 rm -f ${LOG}
 
 #
@@ -61,15 +61,15 @@ fi
 #
 #  Establish the configuration file names.
 #
-COMMON_CONFIG=`pwd`/common.config.sh
-CONFIG=`pwd`/egload.config
+CONFIG_MASTER=${MGICONFIG}/master.config.sh
+CONFIG=${EGLOAD}/egload.config
 
 #
 #  Make sure the configuration files are readable.
 #
-if [ ! -r ${COMMON_CONFIG} ]
+if [ ! -r ${CONFIG_MASTER} ]
 then
-    echo "Cannot read configuration file: ${COMMON_CONFIG}" | tee -a ${LOG}
+    echo "Cannot read configuration file: ${CONFIG_MASTER}" | tee -a ${LOG}
     exit 1
 fi
 if [ ! -r ${CONFIG} ]
@@ -81,7 +81,7 @@ fi
 #
 #  Source the common configuration file.
 #
-. ${COMMON_CONFIG}
+. ${CONFIG_MASTER}
 
 #
 #  Source the common DLA functions script.
@@ -116,7 +116,7 @@ preload
 echo "\n`date`" >> ${LOG_PROC}
 echo "Run the EntrezGene Load application" >> ${LOG_PROC}
 ${JAVA} ${JAVARUNTIMEOPTS} -classpath ${CLASSPATH} \
-        -DCONFIG=${COMMON_CONFIG},${CONFIG} \
+        -DCONFIG=${CONFIG_MASTER},${CONFIG} \
         -DJOBKEY=${JOBKEY} -DOUTFILE_PREVENT_FORMATTING=true ${DLA_START}
 STAT=$?
 if [ ${STAT} -ne 0 ]
@@ -132,7 +132,7 @@ fi
 echo "\n`date`" >> ${LOG_PROC}
 echo "Run the EntrezGene Load output formatting" >> ${LOG_PROC}
 ${JAVA} -classpath ${CLASSPATH} \
-        -DCONFIG=${COMMON_CONFIG},${CONFIG} \
+        -DCONFIG=${CONFIG_MASTER},${CONFIG} \
         -DJOBKEY=${JOBKEY} -DDLA_FORMAT_REPORTS_ONLY=true ${DLA_START}
 STAT=$?
 if [ ${STAT} -ne 0 ]
@@ -162,26 +162,3 @@ postload
 
 exit 0
 
-
-###########################################################################
-#
-# Warranty Disclaimer and Copyright Notice
-#
-#  THE JACKSON LABORATORY MAKES NO REPRESENTATION ABOUT THE SUITABILITY OR
-#  ACCURACY OF THIS SOFTWARE OR DATA FOR ANY PURPOSE, AND MAKES NO WARRANTIES,
-#  EITHER EXPRESS OR IMPLIED, INCLUDING MERCHANTABILITY AND FITNESS FOR A
-#  PARTICULAR PURPOSE OR THAT THE USE OF THIS SOFTWARE OR DATA WILL NOT
-#  INFRINGE ANY THIRD PARTY PATENTS, COPYRIGHTS, TRADEMARKS, OR OTHER RIGHTS.
-#  THE SOFTWARE AND DATA ARE PROVIDED "AS IS".
-#
-#  This software and data are provided to enhance knowledge and encourage
-#  progress in the scientific community and are to be used only for research
-#  and educational purposes.  Any reproduction or use for commercial purpose
-#  is prohibited without the prior express written permission of The Jackson
-#  Laboratory.
-#
-# Copyright \251 1996, 1999, 2002, 2004 by The Jackson Laboratory
-#
-# All Rights Reserved
-#
-###########################################################################
